updated about and portfolio pages

--- a/about.html
+++ b/about.html
@@ -14,14 +14,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <script src="assets/javascript/index.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw"
         crossorigin="anonymous">
-
-
     <title>About</title>
 </head>
 
@@ -29,9 +26,6 @@
     <nav class="navbar">
         <div class="container">
             <ul class="nav navbar-nav navbar-right">
-                <li class="navlink">
-                    <a href="about.html">About</a>
-                </li>
                 <li class="navlink">
                     <a href="contact.html">Connect</a>
                 </li>
@@ -46,12 +40,14 @@
     <div>
         <div class="biorow">
             <div class="col-md-12 biobox">
-                <p class="bioname animated bounceInRight">Hello! My name is Addie Johnson.</p>
-                <div id="biobuild"></div>
+                <img src="assets/images/profilepic.jpg" class="profilepic">
+                <p class="bio">I am a business professional working toward a second career as a freelance software development. My dream
+                    is to build applications that are practical, clean, user-friendly. This passion comes from the many ways
+                    that software has helped and hindered me in my day-to-day work life.</p>
+                <p class="bio">When I'm not dreaming about ways to make amazing applications, I am spending time with my dear husband and
+                    three beautiful children. I also enjoy reading, skiing, and golfing in my spare time.</p>
             </div>
-            <button type="button" onclick="location.href='portfolio.html';" id = "mybutton" class="button">See my work</button>
         </div>
-    </div>
 
 </body>
 
