--- a/contact.html
+++ b/contact.html
@@ -20,60 +20,42 @@
 
 <body>
 
-    <nav class="navbar navbar-default">
+    <nav class="navbar">
         <div class="container">
-
             <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a href="about.html">Contact</a>
+                <li class="navlink">
+                    <a href="about.html">About</a>
                 </li>
-                <li>
+                <li class="navlink">
+                        <a href="contact.html">Connect</a>
+                    </li>
+                <li class="navlink">
                     <a href="portfolio.html">Portfolio</a>
                 </li>
+
             </ul>
 
         </div>
     </nav>
 
-    <div class="wrapper1">
-        <h2>Contact Me!</h2>
-        <div class="container">
+    <div class="biorow">
+        <div class="sociallinks">
 
-            <form>
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" placeholder="John Smith">
+            <a href="https://github.com/Addie27" target="_blank">
+                <img src="assets/images/if_github_circle_black_107161.png" alt="github" class="social" />
+            </a>
 
-                <label for="email">Email</label>
-                <input type="text" id="email" name="email" placeholder="example@email.com">
+            <a href="https://stackoverflow.com/users/8565126/addie27" target="_blank">
+                <img src="assets/images/if_stackoverflow_1220302.png" alt="stackoverflow" class="stack" />
+            </a>
 
-                <label for="message">Message</label>
-                <textarea id="message" name="message"></textarea>
+            <a href="https://www.linkedin.com/in/adelinegroblewskijohnson/" target="blank">
+                <img src="assets/images/if_linkedin_61119.png" alt="linkedin" class="social" />
+            </a>
 
-                <input type="submit" value="Submit">
-
-            </form>
         </div>
     </div>
 
-    <div class="footer">
-            <p class="connect">Connect with Me</p>
-
-            <div class="sociallinks">
-
-                <a href="https://github.com/Addie27" target="_blank">
-                    <img src="assets/images/if_github_circle_black_107161.png" alt="github" class="social" />
-                </a>
-
-                <a href="https://stackoverflow.com/users/8565126/addie27" target="_blank">
-                    <img src="assets/images/if_stackoverflow_1220302.png" alt="stackoverflow" class="stack" />
-                </a>
-
-                <a href="https://www.linkedin.com/in/adelinegroblewskijohnson/" target="blank">
-                    <img src="assets/images/if_linkedin_61119.png" alt="linkedin" class="social" />
-                </a>
-
-            </div>
-    </div>
 
 </body>
 
