--- a/portfolio.html
+++ b/portfolio.html
@@ -1,22 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/portfolio.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script src="assets/javascript/portfolio.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw"
+        crossorigin="anonymous">
     <title>Portfolio</title>
 </head>
+
 <body>
-    
+    <nav class="navbar">
+        <div class="container">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="navlink">
+                    <a href="about.html" class="navbutton">About</a>
+                </li>
+                <li class="navlink">
+                    <a href="contact.html" class="navbutton">Connect</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div>
+        <div class="container">
+            <div class="col-md-12 biobox">
+                <div class="row">
+                    <div class="panel  trivia">
+                        <div class="panel-heading">
+                            <a href="https://addie27.github.io/Trivia-Game/" target="_blank" class="wording">Trivia Game</a>
+                        </div>
+                        <div class="panel-body" id="flip1">Click here for more info</div>
+                        <div class="drop1">Guess the answers before time runs out!</div>
+                    </div>
+                    <div class="panel  train">
+                        <div class="panel-heading">
+                            <a href="https://addie27.github.io/Train-Scheduler/" target="_blank" class="wording">Train Scheduler</a>
+                        </div>
+                        <div class="panel-body" id="flip2">Click here for more info</div>
+                        <div class="drop2">Add your train name, time, and frequency. You can find out how far away it is!</div>
+                    </div>
+                    <div class="panel  project">
+                        <div class="panel-heading">
+                            <a href="https://juliantsk.github.io/Project1/" target="_blank" class="wording">STEM Resources for Philly Kids</a>
+                        </div>
+                        <div class="panel-body" id="flip3">Click here for more info</div>
+                        <div class="drop3">Four person group project designed to connect Philly high school kids to STEM events, tutorials, and classes.</div>
+                    </div>
+                    <div class="panel  crystal">
+                        <div class="panel-heading">
+                            <a href="https://addie27.github.io/Crystal-Game/" target="_blank" class="wording">Crystal Game</a>
+                        </div>
+                        <div class="panel-body" id="flip4">Click here for more info</div>
+                        <div class="drop4">Try and match the selected random number!</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
