--- a/about.html
+++ b/about.html
@@ -27,6 +27,9 @@
         <div class="container">
             <ul class="nav navbar-nav navbar-right">
                 <li class="navlink">
+                    <a href="index.html">Home</a>
+                </li>
+                <li class="navlink">
                     <a href="contact.html">Connect</a>
                 </li>
                 <li class="navlink">
@@ -38,7 +41,7 @@
         </div>
     </nav>
     <div>
-        <div class="biorow">
+        <div class="aboutrow">
             <div class="col-md-12 biobox">
                 <img src="assets/images/profilepic.jpg" class="profilepic">
                 <p class="bio">I am a business professional working toward a second career as a freelance software development. My dream
