--- a/contact.html
+++ b/contact.html
@@ -8,14 +8,19 @@
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script src="assets/javascript/index.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
-    <title>Contact</title>
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw"
+        crossorigin="anonymous">
+    <title>Connect</title>
 </head>
 
 <body>
@@ -24,13 +29,14 @@
         <div class="container">
             <ul class="nav navbar-nav navbar-right">
                 <li class="navlink">
-                    <a href="about.html">About</a>
+                    <a href="index.html" class="navbutton">Home</a>
                 </li>
                 <li class="navlink">
-                        <a href="contact.html">Connect</a>
-                    </li>
+                    <a href="about.html" class="navbutton">About</a>
+                </li>
+
                 <li class="navlink">
-                    <a href="portfolio.html">Portfolio</a>
+                    <a href="portfolio.html" class="navbutton">Portfolio</a>
                 </li>
 
             </ul>
@@ -39,20 +45,28 @@
     </nav>
 
     <div class="biorow">
+        <div>
+            <p class="connect animated infinite pulse">Connect with me, I would love to hear from you!</p>
+        </div>
         <div class="sociallinks">
 
             <a href="https://github.com/Addie27" target="_blank">
-                <img src="assets/images/if_github_circle_black_107161.png" alt="github" class="social" />
-            </a>
-
-            <a href="https://stackoverflow.com/users/8565126/addie27" target="_blank">
-                <img src="assets/images/if_stackoverflow_1220302.png" alt="stackoverflow" class="stack" />
+                <img src="assets/images/github.png" alt="github" class="social" />
             </a>
 
             <a href="https://www.linkedin.com/in/adelinegroblewskijohnson/" target="blank">
-                <img src="assets/images/if_linkedin_61119.png" alt="linkedin" class="social" />
+                <img src="assets/images/linkedin.png" alt="linkedin" class="social" />
             </a>
 
+        </div>
+
+        <div>
+            <address>
+                Email me!
+                <a class="email" href="mailto:groblewski.adeline@gmail.com">groblewski.adeline@gmail.com</a>
+                <br>
+
+            </address>
         </div>
     </div>
 
