--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,9 @@
         <div class="container">
             <ul class="nav navbar-nav navbar-right">
                 <li class="navlink">
+                    <a href="index.html" class="navbutton">Home</a>
+                </li>
+                <li class="navlink">
                     <a href="about.html" class="navbutton">About</a>
                 </li>
                 <li class="navlink">
@@ -60,7 +63,8 @@
                             <a href="https://juliantsk.github.io/Project1/" target="_blank" class="wording">STEM Resources for Philly Kids</a>
                         </div>
                         <div class="panel-body" id="flip3">Click here for more info</div>
-                        <div class="drop3">Four person group project designed to connect Philly high school kids to STEM events, tutorials, and classes.</div>
+                        <div class="drop3">Four person group project designed to connect Philly high school kids to STEM events, tutorials,
+                            and classes.</div>
                     </div>
                     <div class="panel  crystal">
                         <div class="panel-heading">
