--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         crossorigin="anonymous">
 
 
-    <title>About</title>
+    <title>Addie Johnson</title>
 </head>
 
 <body>
@@ -30,13 +30,13 @@
         <div class="container">
             <ul class="nav navbar-nav navbar-right">
                 <li class="navlink">
-                    <a href="about.html">About</a>
+                    <a href="about.html" class="navbutton">About</a>
                 </li>
                 <li class="navlink">
-                    <a href="contact.html">Connect</a>
+                    <a href="contact.html" class="navbutton">Connect</a>
                 </li>
                 <li class="navlink">
-                    <a href="portfolio.html">Portfolio</a>
+                    <a href="portfolio.html" class="navbutton">Portfolio</a>
                 </li>
 
             </ul>
@@ -49,7 +49,7 @@
                 <p class="bioname animated bounceInRight">Hello! My name is Addie Johnson.</p>
                 <div id="biobuild"></div>
             </div>
-            <button type="button" onclick="location.href='portfolio.html';" id = "mybutton" class="button">See my work</button>
+            <button type="button" onclick="location.href='portfolio.html';" id = "mybutton" class="button">Check out my work!</button>
         </div>
     </div>
 
