--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <script src="assets/javascript/portfolio.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw"
@@ -48,21 +49,21 @@
                         <div class="panel-heading">
                             <a href="https://addie27.github.io/Trivia-Game/" target="_blank" class="wording">Trivia Game</a>
                         </div>
-                        <div class="panel-body" id="flip1">Click here for more info</div>
+                        <div class="panel-body" id="flip1">Click <span class="here">here</span> for description</div>
                         <div class="drop1">Guess the answers before time runs out!</div>
                     </div>
                     <div class="panel  train">
                         <div class="panel-heading">
                             <a href="https://addie27.github.io/Train-Scheduler/" target="_blank" class="wording">Train Scheduler</a>
                         </div>
-                        <div class="panel-body" id="flip2">Click here for more info</div>
+                        <div class="panel-body" id="flip2">Click <span class="here">here</span> for description</div>
                         <div class="drop2">Add your train name, time, and frequency. You can find out how far away it is!</div>
                     </div>
                     <div class="panel  project">
                         <div class="panel-heading">
                             <a href="https://juliantsk.github.io/Project1/" target="_blank" class="wording">STEM Resources for Philly Kids</a>
                         </div>
-                        <div class="panel-body" id="flip3">Click here for more info</div>
+                        <div class="panel-body" id="flip3">Click <span class="here">here</span> for description</div>
                         <div class="drop3">Four person group project designed to connect Philly high school kids to STEM events, tutorials,
                             and classes.</div>
                     </div>
@@ -70,7 +71,7 @@
                         <div class="panel-heading">
                             <a href="https://addie27.github.io/Crystal-Game/" target="_blank" class="wording">Crystal Game</a>
                         </div>
-                        <div class="panel-body" id="flip4">Click here for more info</div>
+                        <div class="panel-body" id="flip4">Click <span class="here">here</span> for description</div>
                         <div class="drop4">Try and match the selected random number!</div>
                     </div>
                 </div>
