--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw"
@@ -27,13 +28,13 @@
         <div class="container">
             <ul class="nav navbar-nav navbar-right">
                 <li class="navlink">
-                    <a href="index.html">Home</a>
+                    <a href="index.html" class="navbutton">Home</a>
                 </li>
                 <li class="navlink">
-                    <a href="contact.html">Connect</a>
+                    <a href="contact.html" class="navbutton">Connect</a>
                 </li>
                 <li class="navlink">
-                    <a href="portfolio.html">Portfolio</a>
+                    <a href="portfolio.html" class="navbutton">Portfolio</a>
                 </li>
 
             </ul>
