--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         <div class="aboutrow">
             <div class="col-md-12 biobox">
                 <img src="assets/images/profilepic.jpg" class="profilepic">
-                <p class="bio">I am a business professional working toward a second career as a freelance software development. My dream
+                <p class="bio">I am a business professional working toward a second career as a freelance software developer. My dream
                     is to build applications that are practical, clean, user-friendly. This passion comes from the many ways
                     that software has helped and hindered me in my day-to-day work life.</p>
                 <p class="bio">When I'm not dreaming about ways to make amazing applications, I am spending time with my dear husband and
