changes to html and css

--- a/about.html
+++ b/about.html
@@ -20,39 +20,41 @@
     <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw"
         crossorigin="anonymous">
+    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.ico"/>
     <title>About</title>
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="container">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="navlink">
-                    <a href="index.html" class="navbutton">Home</a>
-                </li>
-                <li class="navlink">
-                    <a href="contact.html" class="navbutton">Connect</a>
-                </li>
-                <li class="navlink">
-                    <a href="portfolio.html" class="navbutton">Portfolio</a>
-                </li>
+    <div class="about">
+        <nav class="navbar">
+            <div class="container">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="navlink">
+                        <a href="index.html" class="navbutton">Home</a>
+                    </li>
+                    <li class="navlink">
+                        <a href="contact.html" class="navbutton">Connect</a>
+                    </li>
+                    <li class="navlink">
+                        <a href="portfolio.html" class="navbutton">Portfolio</a>
+                    </li>
 
-            </ul>
+                </ul>
 
-        </div>
-    </nav>
-    <div>
-        <div class="aboutrow">
-            <div class="col-md-12 biobox">
-                <img src="assets/images/profilepic.jpg" class="profilepic">
-                <p class="bio">I am a business professional working toward a second career as a freelance software developer. My dream
-                    is to build applications that are practical, clean, user-friendly. This passion comes from the many ways
-                    that software has helped and hindered me in my day-to-day work life.</p>
-                <p class="bio">When I'm not dreaming about ways to make amazing applications, I am spending time with my dear husband and
-                    three beautiful children. I also enjoy reading, skiing, and golfing in my spare time.</p>
+            </div>
+        </nav>
+        <div>
+            <div class="aboutrow">
+                <div class="col-md-12 biobox">
+                    <img src="assets/images/profilepic.jpg" class="profilepic">
+                    <p class="bio">I am a business professional working toward a second career as a freelance software developer. My dream
+                        is to build applications that are practical, clean, user-friendly. This passion comes from the many
+                        ways that software has helped and hindered me in my day-to-day work life.</p>
+                    <p class="bio">When I'm not dreaming about ways to make amazing applications, I am spending time with my dear husband
+                        and three beautiful children. I also enjoy reading, skiing, and golfing in my spare time.</p>
+                </div>
             </div>
         </div>
-
 </body>
 
 </html>
