--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
     <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw"
         crossorigin="anonymous">
+    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.ico" />
     <title>Connect</title>
 </head>
 
