--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw"
         crossorigin="anonymous">
 
-
+    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.ico" />
     <title>Addie Johnson</title>
 </head>
 
@@ -50,7 +50,7 @@
                 <p class="bioname animated bounceInRight">Hello! My name is Addie Johnson.</p>
                 <div id="biobuild"></div>
             </div>
-            <button type="button" onclick="location.href='portfolio.html';" id = "mybutton" class="button">Check out my work!</button>
+            <button type="button" onclick="location.href='portfolio.html';" id="mybutton" class="button">Check out my work!</button>
         </div>
     </div>
 
