minor styling changes

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw"
         crossorigin="anonymous">
-    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.ico"/>
+    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.ico" />
     <title>About</title>
 </head>
 
@@ -40,6 +40,9 @@
                     </li>
 
                 </ul>
+                <div class="navbar-left">
+                    <a href="index.html" class="nav-name">Addie Johnson</a>
+                </div>
 
             </div>
         </nav>
@@ -50,6 +53,7 @@
                     <p class="bio">I am a business professional working toward a second career as a freelance software developer. My dream
                         is to build applications that are practical, clean, user-friendly. This passion comes from the many
                         ways that software has helped and hindered me in my day-to-day work life.</p>
+                    <br/>
                     <p class="bio">When I'm not dreaming about ways to make amazing applications, I am spending time with my dear husband
                         and three beautiful children. I also enjoy reading, skiing, and golfing in my spare time.</p>
                 </div>
