--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,9 @@
                 </li>
 
             </ul>
+            <div class="navbar-left">
+                <a href="index.html" class="nav-name">Addie Johnson</a>
+            </div>
 
         </div>
     </nav>
