--- a/about.html
+++ b/about.html
@@ -49,10 +49,11 @@
         <div>
             <div class="aboutrow">
                 <div class="col-md-12 biobox">
-                    <img src="assets/images/profilepic.jpg" class="profilepic">
-                    <p class="bio">I am a business professional working toward a second career as a freelance software developer. My dream
-                        is to build applications that are practical, clean, user-friendly. This passion comes from the many
-                        ways that software has helped and hindered me in my day-to-day work life.</p>
+                    <img src="assets/images/Beauty_zmso_Fotor.jpg" class="profilepic">
+                    <p class="bio">I am a freelance software developer focused on building
+                        applications that help small businesses or nonprofits. I have a background in business administration and my experience includes 5 years of program
+                        management, 12 years of employee management, and 16 years of customer service, team, multi-tasking
+                        and organization skills. </p>
                     <br/>
                     <p class="bio">When I'm not dreaming about ways to make amazing applications, I am spending time with my dear husband
                         and three beautiful children. I also enjoy reading, skiing, and golfing in my spare time.</p>
