--- a/portfolio.html
+++ b/portfolio.html
@@ -16,9 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <script src="assets/javascript/portfolio.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw"
         crossorigin="anonymous">
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.ico" />
@@ -37,6 +35,9 @@
                 </li>
                 <li class="navlink">
                     <a href="contact.html" class="navbutton">Connect</a>
+                </li>
+                <li class="navlink">
+                    <a href="http://www.femaletechfreelancers.com" target="_blank" class="navbutton">Female Tech Freelancers</a>
                 </li>
             </ul>
             <div class="navbar-left">
@@ -106,11 +107,11 @@
                                 <div class="panel-heading crystalpic">
                                     
                                 </div>
-                                <a href="https://powerful-refuge-73813.herokuapp.com/" target="_blank" class="wording"> Sequelize Burger App</a>
+                                <a href="https://powerful-refuge-73813.herokuapp.com/" target="_blank" class="wording"> Eat Da Burger App</a>
                                 <div class="panel-body" id="flip4">Click <span class="here">here</span> for info</div>
                                 <div class="drop4">
                                     <p>Eat the Burger!</p>
-                                    <p>Technologies Used: HTML,CSS, Bootstrap, Node.js, Sequelize, Express, Handlebars</p>
+                                    <p>Technologies Used: HTML,CSS, Bootstrap, Node.js, Express, Handlebars</p>
                                     <a href="https://github.com/Addie27/burger">GitHub Repo</a>
                                 </div>
                             </div>
@@ -120,12 +121,12 @@
                                 <div class="panel-heading mamazonpic">
                                     
                                 </div>
-                                <a href="https://addie27.github.io/Mamazon/" target="_blank" class="wording">Mamazon</a>
+                                <a href="https://secure-thicket-86420.herokuapp.com/" target="_blank" class="wording">Vintage Store</a>
                                 <div class="panel-body" id="flip5">Click <span class="here">here</span> for info</div>
 
                                 <div class="drop5">
-                                    <p>Shopping for Moms!</p>
-                                    <p>Technologies Used: HTML, CSS, Bootstrap, Node.js, mySQL</p>
+                                    <p>A vintage clothing boutique.</p>
+                                    <p>Technologies Used: React, CSS, Bootstrap, Node.js, mySQL, Sequelize, Express, Nodemailer, Stripe.js</p>
                                     <a href="https://github.com/Addie27/Mamazon">GitHub Repo</a>
                                 </div>
                             </div>
