--- a/about.html
+++ b/about.html
@@ -15,9 +15,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw"
         crossorigin="anonymous">
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.ico" />
@@ -38,6 +36,9 @@
                     <li class="navlink">
                         <a href="portfolio.html" class="navbutton">Portfolio</a>
                     </li>
+                    <li class="navlink">
+                        <a href="http://www.femaletechfreelancers.com" target="_blank" class="navbutton">Female Tech Freelancers</a>
+                    </li>
 
                 </ul>
                 <div class="navbar-left">
@@ -48,15 +49,19 @@
         </nav>
         <div>
             <div class="aboutrow">
-                <div class="col-md-12 biobox">
+                <div class="col-md-3">
                     <img src="assets/images/Beauty_zmso_Fotor.jpg" class="profilepic">
+                </div>
+                <div class="col-md-9 biobox">
                     <p class="bio">I am a freelance software developer focused on building
-                        applications that help small businesses or nonprofits. I have a background in business administration and my experience includes 5 years of program
+                        applications that help small businesses and nonprofits. I have a background in business administration and my experience includes 5 years of program
                         management, 12 years of employee management, and 16 years of customer service, team, multi-tasking
                         and organization skills. </p>
+                    <p class="bio">I am the Co-Founder of <a href="http://www.femaletechfreelancers.com">Female Tech Freelancers</a>, an organization that provides support, mentoring, and collaboration with women freelancers in the tech industry.</p>
                     <br/>
-                    <p class="bio">When I'm not dreaming about ways to make amazing applications, I am spending time with my dear husband
-                        and three beautiful children. I also enjoy reading, skiing, and golfing in my spare time.</p>
+                    <p class="bio">When I'm not dreaming about ways to make amazing applications, I am spending time with my dear husband and three beautiful children. I also enjoy reading, skiing, and golfing in my spare time.</p>
+
+                </div>
                 </div>
             </div>
         </div>
