--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <script src="assets/javascript/index.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw"
         crossorigin="anonymous">
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.ico" />
@@ -39,6 +37,9 @@
 
                 <li class="navlink">
                     <a href="portfolio.html" class="navbutton">Portfolio</a>
+                </li>
+                <li class="navlink">
+                    <a href="http://www.femaletechfreelancers.com" target="_blank" class="navbutton">Female Tech Freelancers</a>
                 </li>
 
             </ul>
@@ -68,7 +69,7 @@
         <div>
             <address>
                 Email me!
-                <a class="email" href="mailto:groblewski.adeline@gmail.com">groblewski.adeline@gmail.com</a>
+                <a class="email" href="mailto:addie@femaletechfreelancers.com">addie@femaletechfreelancers.com</a>
                 <br>
 
             </address>
