--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,10 @@
             </address>
         </div>
     </div>
+    <footer id="footer">
+        <small>&copy;Copyright 2018, Addie Johnson</small>
 
+    </footer>
 
 </body>
 
