--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
             <button type="button" onclick="location.href='portfolio.html';" id="mybutton" class="button">Check out my work!</button>
         </div>
     </div>
+    <footer id="footer">
+        <small>&copy;Copyright 2018, Addie Johnson</small>
+
+    </footer>
 
 </body>
 
