--- a/about.html
+++ b/about.html
@@ -65,6 +65,10 @@
                 </div>
             </div>
         </div>
+        <footer id="footer">
+            <small>&copy;Copyright 2018, Addie Johnson</small>
+    
+        </footer>
 </body>
 
 </html>
