--- a/portfolio.html
+++ b/portfolio.html
@@ -150,7 +150,10 @@
             </div>
         </div>
     </div>
+    <footer id="footer">
+        <small>&copy;Copyright 2018, Addie Johnson</small>
 
+    </footer>
 </body>
 
 </html>
