--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
         </div>
     </nav>
 
-    <div class="biorow">
+    <div class="jumbotron">
         <div>
             <p class="connect animated wobble">Connect with me, I would love to hear from you!</p>
         </div>
