--- a/index.html
+++ b/index.html
@@ -45,14 +45,13 @@
 
         </div>
     </nav>
-    <div>
-        <div class="biorow">
+    <div class="jumbotron">
+        
             <div class="col-md-12 biobox">
                 <p class="bioname animated bounceInRight">Hello! My name is Addie Johnson.</p>
                 <div id="biobuild"></div>
-            </div>
-            <button type="button" onclick="location.href='portfolio.html';" id="mybutton" class="button">Check out my work!</button>
-        </div>
+                <button type="button" onclick="location.href='portfolio.html';" id="mybutton" class="button">Check out my work!</button>
+             </div>
     </div>
     <footer id="footer">
         <small>&copy;Copyright 2018, Addie Johnson</small>
