--- a/about.html
+++ b/about.html
@@ -47,27 +47,27 @@
 
             </div>
         </nav>
-        <div>
-            <div class="aboutrow">
-                <div class="col-md-3">
-                    <img src="assets/images/Beauty_zmso_Fotor.jpg" class="profilepic">
-                </div>
-                <div class="col-md-9 biobox">
-                    <p class="bio">I am a freelance software developer focused on building
-                        applications that help small businesses and nonprofits. I have a background in business administration and my experience includes 5 years of program
-                        management, 12 years of employee management, and 16 years of customer service, team, multi-tasking
-                        and organization skills. </p>
-                    <p class="bio">I am the Co-Founder of <a href="http://www.femaletechfreelancers.com">Female Tech Freelancers</a>, an organization that provides support, mentoring, and collaboration with women freelancers in the tech industry.</p>
-                    <br/>
-                    <p class="bio">When I'm not dreaming about ways to make amazing applications, I am spending time with my dear husband and three beautiful children. I also enjoy reading, skiing, and golfing in my spare time.</p>
 
-                </div>
-                </div>
+        <div class="jumbotron">
+
+            <div class="col-md-12 biobox">
+                <p><img src="assets/images/Beauty_zmso_Fotor.jpg" class="profilepic"></p>
+                <p class="bio">I am a freelance software developer focused on building applications that help small businesses and nonprofits.
+                    I have a background in business administration and my experience includes 5 years of program management,
+                    12 years of employee management, and 16 years of customer service, team, multi-tasking and organization
+                    skills. </p>
+                <p class="bio">I am the Co-Founder of
+                    <a href="http://www.femaletechfreelancers.com">Female Tech Freelancers</a>, an organization that provides support, mentoring, and collaboration with
+                    women freelancers in the tech industry.</p>
+                <br/>
+                <p class="bio">When I'm not dreaming about ways to make amazing applications, I am spending time with my dear husband and
+                    three beautiful children. I also enjoy reading, skiing, and golfing in my spare time.</p>
             </div>
+
         </div>
         <footer id="footer">
             <small>&copy;Copyright 2018, Addie Johnson</small>
-    
+
         </footer>
 </body>
 
