--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </nav>
     <div class="jumbotron">
         
-            <div class="col-md-12 biobox">
+            <div class="col-md-12 bioindex">
                 <p class="bioname animated bounceInRight">Hello! My name is Addie Johnson.</p>
                 <div id="biobuild"></div>
                 <button type="button" onclick="location.href='portfolio.html';" id="mybutton" class="button">Check out my work!</button>
