--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/contact.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
@@ -14,7 +14,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <script src="assets/javascript/index.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw"
@@ -51,23 +50,22 @@
     </nav>
 
     <div class="jumbotron">
-        <div>
-            <p class="connect animated wobble">Connect with me, I would love to hear from you!</p>
-        </div>
-        <div class="sociallinks">
+        <div class="wrapper">
 
-            <a href="https://github.com/Addie27" target="_blank">
-                <img src="assets/images/github.png" alt="github" class="social" />
-            </a>
+            <div class=" connect animated wobble">Connect with me, I would love to hear from you!</div>
 
-            <a href="https://www.linkedin.com/in/adelinegroblewskijohnson/" target="blank">
-                <img src="assets/images/linkedin.png" alt="linkedin" class="social" />
-            </a>
+            <div class="sociallinks">
 
-        </div>
+                <a href="https://github.com/Addie27" target="_blank">
+                    <img src="assets/images/github.png" alt="github" class="social" />
+                </a>
 
-        <div>
-            <address>
+                <a href="https://www.linkedin.com/in/adelinegroblewskijohnson/" target="blank">
+                    <img src="assets/images/linkedin.png" alt="linkedin" class="social" />
+                </a>
+
+            </div>
+            <address class="connect">
                 Email me!
                 <a class="email" href="mailto:addie@femaletechfreelancers.com">addie@femaletechfreelancers.com</a>
                 <br>
