--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <script src="assets/javascript/portfolio.js"></script>
+    <script type="text/javascript" src="assets/javascript/portfolio.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw"
@@ -53,12 +53,10 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="panel  trivia">
-                            <div class="panel-heading triviapic">
-
-                            </div>
+                            <a href="https://addie27.github.io/Trivia-Game/" target="_blank"><div class="panel-heading triviapic"></div></a>
                             <a href="https://addie27.github.io/Trivia-Game/" target="_blank" class="wording">Trivia Game</a>
                             <div class="panel-body" id="flip1">Click
-                                <span class="here">here</span> for info</div>
+                                <span class="here">here</span> for description</div>
 
                             <div class="drop1">
                                 <p>Guess the answers before time runs out!</p>
@@ -71,12 +69,10 @@
                     </div>
                     <div class="col-md-4">
                         <div class="panel  train">
-                            <div class="panel-heading trainpic">
-
-                            </div>
+                            <a href="https://addie27.github.io/Train-Scheduler/" target="_blank"><div class="panel-heading trainpic"></div></a>
                             <a href="https://addie27.github.io/Train-Scheduler/" target="_blank" class="wording">Train Scheduler</a>
                             <div class="panel-body" id="flip2">Click
-                                <span class="here">here</span> for info</div>
+                                <span class="here">here</span> for description</div>
 
                             <div class="drop2">
                                 <p>Add your train name, time, and frequency. You can find out how far away it is!</p>
@@ -87,12 +83,10 @@
                     </div>
                     <div class="col-md-4">
                         <div class="panel  project">
-                            <div class="panel-heading projectpic">
-
-                            </div>
+                            <a href="https://juliantsk.github.io/Project1/" target="_blank"><div class="panel-heading projectpic"></div></a>
                             <a href="https://juliantsk.github.io/Project1/" target="_blank" class="wording">STEM Resources for Philly Kids</a>
                             <div class="panel-body" id="flip3">Click
-                                <span class="here">here</span> for info</div>
+                                <span class="here">here</span> for description</div>
 
                             <div class="drop3">
                                 <p>Four person group project designed to connect Philly high school kids to STEM events, tutorials,
@@ -107,12 +101,10 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="panel  crystal">
-                            <div class="panel-heading crystalpic">
-
-                            </div>
+                            <a href="https://powerful-refuge-73813.herokuapp.com/" target="_blank"><div class="panel-heading crystalpic"></div></a>
                             <a href="https://powerful-refuge-73813.herokuapp.com/" target="_blank" class="wording"> Eat Da Burger App</a>
                             <div class="panel-body" id="flip4">Click
-                                <span class="here">here</span> for info</div>
+                                <span class="here">here</span> for description</div>
                             <div class="drop4">
                                 <p>Eat the Burger!</p>
                                 <p>Technologies Used: HTML,CSS, Bootstrap, Node.js, Express, Handlebars</p>
@@ -122,12 +114,10 @@
                     </div>
                     <div class="col-md-4">
                         <div class="panel mamazon">
-                            <div class="panel-heading mamazonpic">
-
-                            </div>
-                            <a href="https://secure-thicket-86420.herokuapp.com/" target="_blank" class="wording">Vintage Store</a>
+                            <a href="https://secure-thicket-86420.herokuapp.com/" target="_blank"><div class="panel-heading mamazonpic"></div></a>
+                            <a href="https://secure-thicket-86420.herokuapp.com/" target="_blank" class="wording">Vintage Store <span class="production">(in production)</span></a>
                             <div class="panel-body" id="flip5">Click
-                                <span class="here">here</span> for info</div>
+                                <span class="here">here</span> for description</div>
 
                             <div class="drop5">
                                 <p>A vintage clothing boutique. Please note this site may take a moment to load.</p>
@@ -139,12 +129,10 @@
                     </div>
                     <div class="col-md-4">
                         <div class="panel  friendfinder">
-                            <div class="panel-heading friendpic">
-
-                            </div>
+                            <a href="https://fierce-falls-38645.herokuapp.com/" target="_blank"><div class="panel-heading friendpic"></div></a>
                             <a href="https://fierce-falls-38645.herokuapp.com/" target="_blank" class="wording">Friend Finder</a>
                             <div class="panel-body" id="flip6">Click
-                                <span class="here">here</span> for info</div>
+                                <span class="here">here</span> for description</div>
                             <div class="drop6">
                                 <p>Find a compatible friend!</p>
                                 <p>Technologies Used: HTML,CSS, Bootstrap, Node.js, Express</p>
