--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="jumbotron">
         
             <div class="col-md-12 bioindex">
-                <p class="bioname animated bounceInRight">Hello! My name is Addie Johnson.</p>
+                <p class="bioname animated bounceInRight">Hello! My name is Addie Johnson and I am a web developer.</p>
                 <div id="biobuild"></div>
                 <button type="button" onclick="location.href='portfolio.html';" id="mybutton" class="button">Check out my work!</button>
              </div>
