--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         
             <div class="col-md-12 bioindex">
                 <p class="bioname animated bounceInRight">Hello! My name is Addie Johnson and I am a web developer.</p>
-                <div id="biobuild"></div>
+                <div class="create animated bounceInRight">I love to create clean and user-friendly applications. Let me build one for you.</div>
                 <button type="button" onclick="location.href='portfolio.html';" id="mybutton" class="button">Check out my work!</button>
              </div>
     </div>
