--- a/portfolio.html
+++ b/portfolio.html
@@ -83,8 +83,8 @@
                     </div>
                     <div class="col-md-4">
                         <div class="panel  project">
-                            <a href="https://juliantsk.github.io/Project1/" target="_blank"><div class="panel-heading projectpic"></div></a>
-                            <a href="https://juliantsk.github.io/Project1/" target="_blank" class="wording">STEM Resources for Philly Kids</a>
+                            <a href="https://addie27.github.io/Project1/" target="_blank"><div class="panel-heading projectpic"></div></a>
+                            <a href="https://addie27.github.io/Project1/" target="_blank" class="wording">STEM Resources for Philly Kids</a>
                             <div class="panel-body" id="flip3">Click
                                 <span class="here">here</span> for description</div>
 
@@ -92,7 +92,7 @@
                                 <p>Four person group project designed to connect Philly high school kids to STEM events, tutorials,
                                     and classes.</p>
                                 <p>Technologies Used: HTML, CSS, JS, Bootstrap, APIs, animate.css</p>
-                                <a href="https://github.com/juliantsk/Project1">GitHub Repo</a>
+                                <a href="https://github.com/Addie27/Project1">GitHub Repo</a>
                             </div>
                         </div>
                     </div>
